logs/dag_id=Weather_DAG_V4.2/run_id=scheduled__2024-02-12T010100+0000/task_id=data_to_db/attempt=1.log
[2024-02-12T12:07:33.777+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: Weather_DAG_V4.2.data_to_db scheduled__2024-02-12T01:01:00+00:00 [queued]>
[2024-02-12T12:07:33.844+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: Weather_DAG_V4.2.data_to_db scheduled__2024-02-12T01:01:00+00:00 [queued]>
[2024-02-12T12:07:33.852+0000] {taskinstance.py:2170} INFO - Starting attempt 1 of 1
[2024-02-12T12:07:34.024+0000] {taskinstance.py:2191} INFO - Executing <Task(PostgresOperator): data_to_db> on 2024-02-12 01:01:00+00:00
[2024-02-12T12:07:34.041+0000] {standard_task_runner.py:60} INFO - Started process 11087 to run task
[2024-02-12T12:07:34.086+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'Weather_DAG_V4.2', 'data_to_db', 'scheduled__2024-02-12T01:01:00+00:00', '--job-id', '8302', '--raw', '--subdir', 'DAGS_FOLDER/Weather_dag.py', '--cfg-path', '/tmp/tmpcufqvt69']
[2024-02-12T12:07:34.098+0000] {standard_task_runner.py:88} INFO - Job 8302: Subtask data_to_db
[2024-02-12T12:07:34.287+0000] {task_command.py:423} INFO - Running <TaskInstance: Weather_DAG_V4.2.data_to_db scheduled__2024-02-12T01:01:00+00:00 [running]> on host 06573eafe810
[2024-02-12T12:07:34.619+0000] {taskinstance.py:2480} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='Weather_DAG_V4.2' AIRFLOW_CTX_TASK_ID='data_to_db' AIRFLOW_CTX_EXECUTION_DATE='2024-02-12T01:01:00+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2024-02-12T01:01:00+00:00'
[2024-02-12T12:07:34.622+0000] {sql.py:276} INFO - Executing: 
        LOAD DATA INFILE weather.csv 
        INTO TABLE weather_tab 
        FIELDS TERMINATED BY ',' 
        ENCLOSED BY '"'
        LINES TERMINATED BY 'n'
        IGNORE 1 ROWS
        
[2024-02-12T12:07:34.639+0000] {base.py:83} INFO - Using connection ID 'postgres_localhost' for task execution.
[2024-02-12T12:07:34.687+0000] {base.py:83} INFO - Using connection ID 'postgres_localhost' for task execution.
[2024-02-12T12:07:34.718+0000] {sql.py:450} INFO - Running statement: 
        LOAD DATA INFILE weather.csv 
        INTO TABLE weather_tab 
        FIELDS TERMINATED BY ',' 
        ENCLOSED BY '"'
        LINES TERMINATED BY 'n'
        IGNORE 1 ROWS
        , parameters: None
[2024-02-12T12:07:34.724+0000] {taskinstance.py:2698} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 433, in _execute_task
    result = execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/operators/sql.py", line 282, in execute
    output = hook.run(
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 398, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 455, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "DATA"
LINE 2:         LOAD DATA INFILE weather.csv 
                     ^

[2024-02-12T12:07:34.753+0000] {taskinstance.py:1138} INFO - Marking task as FAILED. dag_id=Weather_DAG_V4.2, task_id=data_to_db, execution_date=20240212T010100, start_date=20240212T120733, end_date=20240212T120734
[2024-02-12T12:07:34.784+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 8302 for task data_to_db (syntax error at or near "DATA"
LINE 2:         LOAD DATA INFILE weather.csv 
                     ^
; 11087)
[2024-02-12T12:07:34.810+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2024-02-12T12:07:34.848+0000] {taskinstance.py:3280} INFO - 0 downstream tasks scheduled from follow-on schedule check
